--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -1,7 +1,100 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Game Design</title></head>
-  <body>
-    <h1>Hello from GameDev!</h1>
-  </body>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>محمد عباسی | گیم دیزاینر</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Vazirmatn', sans-serif;
+      background-color: #1a1a1a;
+      color: #e0e0e0;
+      direction: rtl;
+    }
+
+    header {
+      background: linear-gradient(90deg, #6a11cb, #2575fc);
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      color: #a78bfa;
+      font-size: 1.4rem;
+      border-bottom: 1px solid #444;
+      padding-bottom: 0.3rem;
+      margin-bottom: 1rem;
+    }
+
+    ul {
+      padding-right: 1.5rem;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>محمد عباسی، گیم دیزاینر</h1>
+    <p>طراح بازی با تمرکز بر خلق تجربه‌های تعاملی منحصربه‌فرد.<br>
+    سابقه‌ی فعالیت به‌صورت فریلنس و همکاری با تیم‌های خلاق در پروژه‌های تجاری و شخصی.<br>
+    مشتاق یادگیری مداوم، همکاری تیمی و ارائه راه‌حل‌های خلاقانه در مسیر توسعه بازی و رسانه‌های تعاملی.</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>اطلاعات تحصیلی</h2>
+      <ul>
+        <li>دیپلم - سال 1400، هنرستان فنی حرفه ای شهید حایری بروجن، رشته شبکه و نرم‌افزار رایانه</li>
+        <li>کاردانی - سال 1403، دانشکده فنی شهید مهاجر اصفهان، رشته نرم‌افزار</li>
+        <li>کارشناسی - در حال تحصیل، دانشکده فنی انقلاب اسلامی تهران، رشته انیمیشن دیجیتال</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>سوابق شغلی</h2>
+      <ul>
+        <li><strong>نردبان اندیشه</strong> - کار بر روی بازی شریف‌آباد:
+          <ul>
+            <li>دیزاین سیزن پس</li>
+            <li>Maintenance</li>
+            <li>دیزاین مراحل Regetta</li>
+            <li>تست مینی‌گیم آمیرزا</li>
+            <li>Task Management</li>
+            <li>دیزاین مینی‌گیم نعمت موتوری</li>
+          </ul>
+        </li>
+        <li><strong>پروژه‌های شخصی</strong>:
+          <ul>
+            <li>دیزاین بازی Lamplighter</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+  </main>
+</body>
 </html>
