--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>محمد عباسی | گیم دیزاینر</title>
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -18,34 +19,42 @@
       background: linear-gradient(90deg, #6a11cb, #2575fc);
       padding: 2rem;
       text-align: center;
+      border-bottom: 4px solid #444;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
 
     header p {
-      margin-top: 0.5rem;
-      font-size: 1rem;
+      margin-top: 1rem;
+      font-size: 1.1rem;
+      line-height: 1.8;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     main {
-      max-width: 800px;
+      max-width: 900px;
       margin: 2rem auto;
-      padding: 1rem;
+      padding: 1.5rem;
+      background-color: #2a2a2a;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     }
 
     section {
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
     }
 
     h2 {
       color: #a78bfa;
-      font-size: 1.4rem;
-      border-bottom: 1px solid #444;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
+      font-size: 1.6rem;
+      border-bottom: 2px solid #444;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1.2rem;
     }
 
     ul {
@@ -53,7 +62,17 @@
     }
 
     li {
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.7rem;
+      line-height: 1.6;
+    }
+
+    ul ul {
+      margin-top: 0.5rem;
+      padding-right: 1rem;
+    }
+
+    strong {
+      color: #60a5fa;
     }
   </style>
 </head>
