--- a/gamedev/index-en.html
+++ b/gamedev/index-en.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mohammad Abbasi | Game Designer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="lang-switch">
+    <button onclick="switchTo('fa')">نسخه فارسی</button>
+  </div>
 
+  <div class="container">
+    <h1>Mohammad Abbasi</h1>
+    <p class="subtitle">Game Designer</p>
+    <p>
+      A game designer focused on crafting unique interactive experiences. Experienced in freelancing and collaborating with creative teams on both commercial and personal projects. Passionate about continuous learning, teamwork, and delivering creative solutions in game development and interactive media.
+    </p>
+
+    <div class="section">
+      <h3>Education:</h3>
+      <ul>
+        <li>Diploma - 2021: Shahid Hayeri Technical School, Borujen (Computer Networks)</li>
+        <li>Associate - 2024: Shahid Mohajer Technical College, Isfahan (Software Engineering)</li>
+        <li>Bachelor - In Progress: Enghelab Technical College, Tehran (Digital Animation)</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h3>Experience:</h3>
+      <ul>
+        <li>Nardeban Andisheh (Sharif Abad Game):
+          <ul>
+            <li>Season pass design, Regetta level design, Amirza mini-game testing, Nemat Motor mini-game design</li>
+            <li>Task management, maintenance</li>
+          </ul>
+        </li>
+        <li>Personal Project: Lamplighter Game Design</li>
+      </ul>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
