--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -1,12 +1,48 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="fa">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL='index-fa.html'" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    در حال انتقال...
-  </body>
+<html lang="fa" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>محمد عباسی | گیم دیزاینر</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="lang-switch">
+    <button onclick="switchTo('en')">English Version</button>
+  </div>
+
+  <div class="container">
+    <h1>محمد عباسی</h1>
+    <p class="subtitle">گیم دیزاینر</p>
+    <p>
+      طراح بازی با تمرکز بر خلق تجربه‌های تعاملی منحصربه‌فرد. سابقه‌ی فعالیت به‌صورت
+      فریلنس و همکاری با تیم‌های خلاق در پروژه‌های تجاری و شخصی. مشتاق یادگیری
+      مداوم، همکاری تیمی و ارائه راه‌حل‌های خلاقانه در مسیر توسعه بازی و رسانه‌های تعاملی.
+    </p>
+
+    <div class="section">
+      <h3>اطلاعات تحصیلی:</h3>
+      <ul>
+        <li>دیپلم - سال 1400: هنرستان فنی شهید حایری، بروجن (شبکه و نرم‌افزار)</li>
+        <li>کاردانی - 1403: دانشکده فنی شهید مهاجر، اصفهان (نرم‌افزار)</li>
+        <li>کارشناسی - در حال تحصیل: دانشکده فنی انقلاب اسلامی، تهران (انیمیشن دیجیتال)</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h3>سوابق شغلی:</h3>
+      <ul>
+        <li>نردبان اندیشه - بازی شریف‌آباد:
+          <ul>
+            <li>طراحی سیزن پس، مراحل Regetta، تست آمیرزا، دیزاین نعمت موتوری</li>
+            <li>Task Management، نگهداری پروژه</li>
+          </ul>
+        </li>
+        <li>پروژه شخصی: طراحی بازی Lamplighter</li>
+      </ul>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
