--- a/index.html
+++ b/index.html
@@ -1,8 +1,108 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Onyro</title></head>
-  <body>
-    <h1>Welcome to Onyro!</h1>
-    <p><a href="/music">Music</a> | <a href="/gamedev">Game Design</a></p>
-  </body>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <title>onyro | محمد عباسی</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.003.0/dist/font-face.css" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      font-family: Vazirmatn, sans-serif;
+      box-sizing: border-box;
+    }
+
+    body, html {
+      height: 100%;
+      background-color: #1c1c1c;
+      color: white;
+      direction: rtl;
+    }
+
+    .container {
+      display: flex;
+      height: 100vh;
+      width: 100vw;
+      position: relative;
+    }
+
+    .half {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .half:hover {
+      filter: brightness(1.2);
+    }
+
+    .left {
+      background: linear-gradient(135deg, #4f46e5, #6366f1);
+    }
+
+    .right {
+      background: linear-gradient(135deg, #9333ea, #a855f7);
+    }
+
+    .center-circle {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #2c2c2c;
+      border: 4px solid #444;
+      border-radius: 50%;
+      width: 280px;
+      height: 280px;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 20px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+    }
+
+    .center-circle img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+      object-fit: cover;
+    }
+
+    .center-circle h2 {
+      margin-bottom: 10px;
+      font-size: 18px;
+    }
+
+    .center-circle p {
+      font-size: 14px;
+      color: #bbb;
+    }
+  </style>
+</head>
+<body>
+
+<div class="container">
+  <div class="half left" onclick="location.href='/gamedev'">
+    🎮 Game Design
+  </div>
+  <div class="half right" onclick="location.href='/music'">
+    🎵 Music
+  </div>
+
+  <div class="center-circle">
+    <img src="pfp.jpg" alt="Mohammad Abbasi">
+    <h2>محمد عباسی</h2>
+    <p>طراح بازی و موزیسین<br>مشتاق تجربه‌های تعاملی نو</p>
+  </div>
+</div>
+
+</body>
 </html>
