--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>onyro | محمد عباسی</title>
+  <title>Onyro | محمد عباسی</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.003.0/dist/font-face.css" rel="stylesheet">
   <style>
@@ -48,42 +48,45 @@
       background: linear-gradient(135deg, #9333ea, #a855f7);
     }
 
-    .center-circle {
+    .center-profile {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #2c2c2c;
-      border: 4px solid #444;
-      border-radius: 50%;
-      width: 280px;
-      height: 280px;
+      transform: translate(-50%, -60%);
       z-index: 10;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
       text-align: center;
-      padding: 20px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.6);
     }
 
-    .center-circle img {
-      width: 80px;
-      height: 80px;
+    .profile-pic {
+      background-color: #2c2c2c;
+      border: 4px solid #444;
       border-radius: 50%;
-      margin-bottom: 15px;
+      width: 180px;
+      height: 180px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+      overflow: hidden;
+    }
+
+    .profile-pic img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
+      border-radius: 50%;
     }
 
-    .center-circle h2 {
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
-
-    .center-circle p {
-      font-size: 14px;
-      color: #bbb;
+    .intro-box {
+      margin-top: 20px;
+      background-color: #2c2c2c;
+      padding: 20px;
+      border-radius: 16px;
+      max-width: 400px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      color: #ccc;
+      font-size: 15px;
+      line-height: 1.8;
     }
   </style>
 </head>
@@ -97,10 +100,14 @@
     🎵 Music
   </div>
 
-  <div class="center-circle">
-    <img src="pfp.jpg" alt="Mohammad Abbasi">
-    <h2>محمد عباسی</h2>
-    <p>طراح بازی و موزیسین<br>مشتاق تجربه‌های تعاملی نو</p>
+  <div class="center-profile">
+    <div class="profile-pic">
+      <img src="your-photo.jpg" alt="Mohammad Abbasi">
+    </div>
+    <div class="intro-box">
+      محمد عباسی، طراح بازی و موزیسین<br>
+      تمرکز بر تجربه‌های تعاملی، همکاری تیمی و یادگیری مداوم.
+    </div>
   </div>
 </div>
 
