--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <div class="center-profile">
     <div class="profile-pic">
-      <img src="your-photo.jpg" alt="Mohammad Abbasi">
+      <img src="pfp.jpg" alt="Mohammad Abbasi">
     </div>
     <div class="intro-box">
       محمد عباسی، طراح بازی و موزیسین<br>
