--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       height: 100vh;
       width: 100vw;
       position: relative;
+      font-size: 72px;
+      foreground-color: #888888;
     }
 
     .half {
