--- a/music/index.html
+++ b/music/index.html
@@ -93,32 +93,32 @@
 
   <div class="music-links">
 
-    <a class="link-item" href="https://open.spotify.com/artist/..." target="_blank">
+    <a class="link-item" href="https://open.spotify.com/artist/304w7eplBfFpipzMmSyV05" target="_blank">
       <svg><use href="#spotify-icon"/></svg>
       Spotify
     </a>
 
-    <a class="link-item" href="https://music.apple.com/..." target="_blank">
+    <a class="link-item" href="https://music.apple.com/gb/artist/%C3%B8nyro/1721889819" target="_blank">
       <svg><use href="#apple-icon"/></svg>
       Apple Music
     </a>
 
-    <a class="link-item" href="https://www.youtube.com/@..." target="_blank">
+    <a class="link-item" href="https://www.youtube.com/channel/UCzrEoPPAOr0wDHVAJL7eibw" target="_blank">
       <svg><use href="#youtube-icon"/></svg>
       YouTube
     </a>
 
-    <a class="link-item" href="https://soundcloud.com/..." target="_blank">
+    <a class="link-item" href="https://soundcloud.com/onyro1" target="_blank">
       <svg><use href="#soundcloud-icon"/></svg>
       SoundCloud
     </a>
 
-    <a class="link-item" href="https://music.amazon.com/..." target="_blank">
+    <a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank">
       <svg><use href="#amazon-icon"/></svg>
       Amazon Music
     </a>
 
-    <a class="link-item" href="https://deezer.com/..." target="_blank">
+    <a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank">
       <svg><use href="#deezer-icon"/></svg>
       Deezer
     </a>
