--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>موسیقی | محمد عباسی</title>
+  <title>Music | ønyro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.003.0/dist/font-face.css" rel="stylesheet">
   <style>
@@ -84,7 +84,7 @@
 </head>
 <body>
 
-  <h1>🎵 موسیقی‌های محمد عباسی</h1>
+  <h1>🎵 دنیای موسیقی من!  </h1>
 
   <!-- آلبوم کاور -->
   <div class="cover">
