--- a/index.html
+++ b/index.html
@@ -11,82 +11,94 @@
       font-family: 'Vazirmatn', sans-serif;
       background-color: #1e1e1e;
       color: #fff;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .container {
+      display: flex;
+      height: 50vh;
+    }
+    .half {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: linear-gradient(to bottom right, #6a00f4, #0077ff);
+      transition: transform 0.3s ease;
+    }
+    .half:hover {
+      transform: scale(1.02);
+    }
+    .center {
+      position: relative;
+      top: -100px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    .container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%;
-      max-width: 1200px;
-    }
-    .half {
-      width: 45%;
-      padding: 2rem;
-      border-radius: 16px;
-      background: linear-gradient(to bottom right, #6a00f4, #0077ff);
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    .half:hover {
-      transform: scale(1.05);
     }
     .profile {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 200px;
-      height: 200px;
+      width: 180px;
+      height: 180px;
       border-radius: 50%;
       background-image: url('profile.jpg');
       background-size: cover;
       background-position: center;
       border: 4px solid #fff;
-      z-index: 1;
+      margin-bottom: 1rem;
     }
     .intro {
-      position: absolute;
-      top: calc(50% + 130px);
-      left: 50%;
-      transform: translateX(-50%);
       background-color: #2c2c2c;
       padding: 1rem 2rem;
       border-radius: 12px;
+      text-align: center;
       max-width: 500px;
-      z-index: 1;
     }
     .socials {
-      position: absolute;
-      bottom: 2rem;
       display: flex;
-      gap: 1rem;
+      justify-content: center;
+      gap: 1.5rem;
+      padding: 1rem 0;
     }
     .socials a {
       color: #fff;
       text-decoration: none;
       font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    .socials svg {
+      width: 24px;
+      height: 24px;
+      fill: currentColor;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="half" onclick="location.href='gamedev/index.html'">Game Design</div>
     <div class="half" onclick="location.href='music/index.html'">Music</div>
+    <div class="half" onclick="location.href='gamedev/index.html'">Game Design</div>
   </div>
-  <div class="profile"></div>
-  <div class="intro">
-    <p>Mohammad Abbasi – Game Designer & Music Artist</p>
+  <div class="center">
+    <div class="profile"></div>
+    <div class="intro">
+      <p>Mohammad Abbasi – Game Designer & Music Artist</p>
+    </div>
   </div>
   <div class="socials">
-    <a href="#">Instagram</a>
-    <a href="#">Twitter</a>
-    <a href="#">LinkedIn</a>
+    <a href="#" aria-label="Instagram">
+      <svg viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.5a1 1 0 100 2 1 1 0 000-2z"/></svg>
+    </a>
+    <a href="#" aria-label="Twitter">
+      <svg viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.59-2.46.7a4.3 4.3 0 001.88-2.37 8.59 8.59 0 01-2.72 1.04 4.28 4.28 0 00-7.3 3.9 12.15 12.15 0 01-8.8-4.46 4.28 4.28 0 001.32 5.7A4.27 4.27 0 012 9.5v.05a4.28 4.28 0 003.43 4.2 4.3 4.3 0 01-1.93.07 4.28 4.28 0 004 2.98A8.6 8.6 0 012 19.54a12.13 12.13 0 006.56 1.92c7.88 0 12.2-6.53 12.2-12.2 0-.19 0-.38-.01-.57A8.7 8.7 0 0024 5.3a8.55 8.55 0 01-2.54.7 4.28 4.28 0 001.87-2.37z"/></svg>
+    </a>
+    <a href="#" aria-label="LinkedIn">
+      <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4V8zm7.5 0h3.6v2.6h.05c.5-.95 1.7-1.95 3.45-1.95 3.7 0 4.4 2.4 4.4 5.5V24h-4v-7.5c0-1.8 0-4-2.45-4s-2.8 1.9-2.8 3.9V24h-4V8z"/></svg>
+    </a>
   </div>
 </body>
 </html>
