--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profile.jpg');
+      background-image: url('pfp.jpg');
       background-size: cover;
       background-position: center;
       border: 4px solid #fff;
