--- a/index.html
+++ b/index.html
@@ -2,103 +2,145 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Onyro - Landing</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Vazirmatn', sans-serif;
       background-color: #1e1e1e;
-      color: #fff;
+      color: white;
       height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .container {
-      display: flex;
-      height: 100vh;
+      overflow: hidden;
+      position: relative;
     }
     .half {
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      width: 50%;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      overflow: hidden;
       cursor: pointer;
+    }
+    .half::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      opacity: 0.3;
+      z-index: 0;
+    }
+    .half .overlay {
+      position: absolute;
+      inset: 0;
       background: linear-gradient(to bottom right, #6a00f4, #0077ff);
-      transition: transform 0.3s ease;
+      opacity: 0.5;
+      z-index: 1;
     }
-    .half:hover {
-      transform: scale(1.02);
+    .half .text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
     }
-    .center {
-      position: relative;
-      top: -100px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+
+    .game {
+      left: 0;
     }
+    .game::before {
+      background-image: url('game.jpg'); /* جایگزین کن با تصویرت */
+    }
+
+    .music {
+      right: 0;
+    }
+    .music::before {
+      background-image: url('music.jpg'); /* جایگزین کن با تصویرت */
+    }
+
     .profile {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -60%);
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('pfp.jpg');
+      background-image: url('profile.jpg'); /* تصویرت */
       background-size: cover;
       background-position: center;
-      border: 4px solid #fff;
-      margin-bottom: 1rem;
+      border: 4px solid white;
+      z-index: 10;
     }
+
     .intro {
+      position: absolute;
+      top: calc(50% + 70px);
+      left: 50%;
+      transform: translateX(-50%);
       background-color: #2c2c2c;
       padding: 1rem 2rem;
       border-radius: 12px;
+      max-width: 400px;
+      z-index: 10;
       text-align: center;
-      max-width: 500px;
+      font-size: 0.95rem;
+      line-height: 1.5;
     }
+
     .socials {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      padding: 1rem 0;
+      gap: 1rem;
+      z-index: 10;
     }
     .socials a {
-      color: #fff;
+      color: white;
       text-decoration: none;
       font-size: 1.5rem;
       display: flex;
       align-items: center;
-      gap: 0.5rem;
     }
     .socials svg {
       width: 24px;
       height: 24px;
-      fill: currentColor;
+      fill: white;
+      margin-right: 6px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="half" onclick="location.href='music/index.html'">Music</div>
-    <div class="half" onclick="location.href='gamedev/index.html'">Game Design</div>
+  <div class="half game" onclick="location.href='gamedev/index.html'">
+    <div class="overlay"></div>
+    <div class="text">Game Design</div>
   </div>
-  <div class="center">
-    <div class="profile"></div>
-    <div class="intro">
-      <p>Mohammad Abbasi – Game Designer & Music Artist</p>
-    </div>
+  <div class="half music" onclick="location.href='music/index.html'">
+    <div class="overlay"></div>
+    <div class="text">Music</div>
   </div>
+
+  <div class="profile"></div>
+
+  <div class="intro">
+    Mohammad Abbasi – Game Designer & Music Artist
+  </div>
+
   <div class="socials">
-    <a href="#" aria-label="Instagram">
-      <svg viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.5a1 1 0 100 2 1 1 0 000-2z"/></svg>
-    </a>
-    <a href="#" aria-label="Twitter">
-      <svg viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.59-2.46.7a4.3 4.3 0 001.88-2.37 8.59 8.59 0 01-2.72 1.04 4.28 4.28 0 00-7.3 3.9 12.15 12.15 0 01-8.8-4.46 4.28 4.28 0 001.32 5.7A4.27 4.27 0 012 9.5v.05a4.28 4.28 0 003.43 4.2 4.3 4.3 0 01-1.93.07 4.28 4.28 0 004 2.98A8.6 8.6 0 012 19.54a12.13 12.13 0 006.56 1.92c7.88 0 12.2-6.53 12.2-12.2 0-.19 0-.38-.01-.57A8.7 8.7 0 0024 5.3a8.55 8.55 0 01-2.54.7 4.28 4.28 0 001.87-2.37z"/></svg>
-    </a>
-    <a href="#" aria-label="LinkedIn">
-      <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4V8zm7.5 0h3.6v2.6h.05c.5-.95 1.7-1.95 3.45-1.95 3.7 0 4.4 2.4 4.4 5.5V24h-4v-7.5c0-1.8 0-4-2.45-4s-2.8 1.9-2.8 3.9V24h-4V8z"/></svg>
-    </a>
+    <a href="#"><svg viewBox="0 0 24 24"><path d="M12 2.2c-5.4 0-9.8 4.4-9.8 9.8s4.4 9.8 9.8 9.8c5.4 0 9.8-4.4 9.8-9.8s-4.4-9.8-9.8-9.8zm0 1.6c4.5 0 8.2 3.7 8.2 8.2s-3.7 8.2-8.2 8.2-8.2-3.7-8.2-8.2 3.7-8.2 8.2-8.2zm1.3 3.4c-.5 0-1 .2-1.3.6-.3.4-.5.8-.4 1.3v1.4H10v1.8h1.6v5.3h2v-5.3h1.5l.2-1.8h-1.7V9.1c0-.2.1-.4.2-.5s.3-.2.5-.2H15V6.8h-1.7z"/></svg>Facebook</a>
+    <a href="#"><svg viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.59-2.47.7a4.27 4.27 0 0 0 1.88-2.36 8.6 8.6 0 0 1-2.72 1.04 4.26 4.26 0 0 0-7.3 3.89A12.1 12.1 0 0 1 3.15 4.6a4.26 4.26 0 0 0 1.32 5.68 4.23 4.23 0 0 1-1.93-.53v.05a4.26 4.26 0 0 0 3.42 4.17c-.4.1-.82.16-1.25.16-.3 0-.6-.03-.88-.08a4.26 4.26 0 0 0 3.98 2.96 8.56 8.56 0 0 1-5.3 1.83c-.35 0-.7-.02-1.04-.06a12.07 12.07 0 0 0 6.53 1.91c7.84 0 12.12-6.5 12.12-12.12 0-.18-.01-.36-.02-.54a8.65 8.65 0 0 0 2.13-2.2z"/></svg>Twitter</a>
+    <a href="#"><svg viewBox="0 0 24 24"><path d="M20.45 20.45h-3.56v-5.34c0-1.27-.02-2.9-1.77-2.9-1.77 0-2.05 1.38-2.05 2.8v5.44H9.5V9h3.42v1.56h.05c.48-.9 1.65-1.85 3.4-1.85 3.63 0 4.3 2.39 4.3 5.5v6.24zM5.34 7.43a2.06 2.06 0 1 1 .01-4.13 2.06 2.06 0 0 1-.01 4.13zM6.82 20.45H3.86V9h2.96v11.45z"/></svg>LinkedIn</a>
   </div>
 </body>
 </html>
