--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .half {
       width: 50%;
-      height: 100vh;
+      height: 70%;
       position: absolute;
       top: 0;
       overflow: hidden;
