--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profile.jpg'); /* تصویرت */
+      background-image: url('pfp.jpg'); /* تصویرت */
       background-size: cover;
       background-position: center;
       border: 4px solid white;
