--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
       font-weight: bold;
       text-align: center;
     }
-
+    .half:hover{
+      width: 60%;
+    }
     .game {
       left: 0;
     }
