--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     }
     .half:hover{
       width: 60%;
+      transition-property: width;
+      transition-duration: 2s;
+      transition-timing-function: linear;
+      transition-delay: 1s; 
     }
     .game {
       left: 0;
