--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
       text-align: center;
     }
     .half:hover{
-      width: 60%;
+      width: 55%;
       transition-property: width;
-      transition-duration: 2s;
-      transition-timing-function: linear;
-      transition-delay: 1s; 
+      transition-duration: 0.5s;
+      transition-timing-function: ease-in-out;
     }
     .game {
       left: 0;
