--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       transition-duration: 0.5s;
       transition-timing-function: ease-in-out;
     }
+      .half:onclick{
+        
+      }
     .game {
       left: 0;
     }
