--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
       font-weight: bold;
       text-align: center;
     }
-    .half:hover{
+    .half .overlay:hover{
       opacity: 1;
       width: 55%;
       transition-property: width;
       transition-duration: 0.2s;
       transition-timing-function: ease-in-out;
     }
-    .half .text:onclick{
+    .half .text:active{
       height: 55%;
       transition-property: height;
       transition-duration: 0.1s;
