--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
       font-weight: bold;
       text-align: center;
     }
-    .half .overlay:hover{
-      opacity: 1;
+    .half:hover{
       width: 55%;
       transition-property: width;
       transition-duration: 0.2s;
       transition-timing-function: ease-in-out;
     }
-    .half .text:active{
+    .half .overlay:hover{
+      opacity: 1;
+    }
+    .half:active{
       height: 55%;
       transition-property: height;
       transition-duration: 0.1s;
