--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       background: linear-gradient(to bottom right, #6a00f4, #0077ff);
       opacity: 0.5;
       z-index: 1;
+      transition-property: opacity;
+      transition-duration: 0.2s;
+      transition-timing-function: ease-in-out;
     }
     .half .text {
       position: absolute;
