--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     .half .overlay {
       position: absolute;
       inset: 0;
-      background: linear-gradient(to bottom right, #6a00f4, #0077ff);
       opacity: 0.5;
       z-index: 1;
       transition-property: opacity;
@@ -59,6 +58,12 @@
       font-size: 2rem;
       font-weight: bold;
       text-align: center;
+    }
+    .half .overlay .game{
+    background: --firstcolor-primary;
+    }
+    .half .overlay .music{
+    background: --secondcolor-primary  
     }
     .half:hover {
       height: 75%;
