--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       font-weight: bold;
       text-align: center;
     }
-    .half .overlay.game:hover{
-    background: --firstcolor-primary;
-    opacity: 0.5;
+    .half .overlay.game:hover {
+      background: var(--firstcolor-primary);
+      opacity: 0.5;
     }
-    .half .overlay.music:hover{
-    background: --secondcolor-primary  
-    opacity: 0.5;
+    .half .overlay.music:hover {
+      background: var(--secondcolor-primary);
+      opacity: 0.5;
     }
     .half:hover {
       height: 75%;
