--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
       font-weight: bold;
       text-align: center;
     }
-    .half .overlay.game:hover {
+    .game:hover .overlay {
       background: var(--firstcolor-primary);
       opacity: 0.5;
     }
-    .half .overlay.music:hover {
+    
+    .music:hover .overlay {
       background: var(--secondcolor-primary);
       opacity: 0.5;
     }
+
     .half:hover {
       height: 75%;
     }
