--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       top: calc(50% + 70px);
       left: 50%;
       transform: translateX(-50%);
-      background-color: #2c2c2c;
+      background-color: #1e1e1e;
       padding: 1rem 2rem;
       border-radius: 12px;
       max-width: 400px;
