--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="profile"></div>
 
   <div class="intro">
-    Mohammad Abbasi – Game Designer & Music Artist
+    Mohammad (onyro) Abbasi <br>Game Designer & Music Artist
   </div>
 
   <div class="socials">
