--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="profile"></div>
 
   <div class="intro">
-    Mohammad (onyro) Abbasi <br>Game Designer & Music Artist
+    <p style="font-size:24px">Mohammad (onyro) Abbasi</p> <br>Game Designer & Music Composer
   </div>
 
   <div class="socials">
