--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="profile"></div>
 
   <div class="intro">
-    <p style="font-size:24px">Mohammad (onyro) Abbasi</p> <br>Game Designer & Music Composer
+    <p style="font-weight:black">Mohammad (onyro) Abbasi</p> <br><p style="font-weight:lighter">Game Designer & Music Composer</p>
   </div>
 
   <div class="socials">
