--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="profile"></div>
 
   <div class="intro">
-    <p style="font-weight:bold">Mohammad (onyro) Abbasi</p> <br><p style="font-weight:light">Game Designer & Music Composer</p>
+    <p style="font-weight:900">Mohammad (onyro) Abbasi</p> <br><p style="font-weight:100">Game Designer & Music Composer</p>
   </div>
 
   <div class="socials">
