--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
       fill: white;
       margin-right: 6px;
     }
+    .intro .name {
+      font-weight: 900;
+      font-size: 1.25rem;
+    }
   </style>
 </head>
 <body>
@@ -155,7 +159,7 @@
   <div class="profile"></div>
 
   <div class="intro">
-    <p style="font-weight:900">Mohammad (onyro) Abbasi</p> <br><p style="font-weight:100">Game Designer & Music Composer</p>
+    <span class="name">Mohammad (onyro) Abbasi</span> <br>Game Designer & Music Composer
   </div>
 
   <div class="socials">
