--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       background-color: #1e1e1e;
       padding: 1rem 1rem;
       border-radius: 12px;
-      max-width: 400px;
+      width: 400px; /* اندازه ثابت */
       z-index: 10;
       text-align: center;
       font-size: 0.95rem;
