--- a/music/index.html
+++ b/music/index.html
@@ -15,14 +15,14 @@
     }
 
     body {
-      background-color: #1c1c1c;
+      background-color: var(--firstcolor-background);
       color: #f0f0f0;
       padding: 40px 20px;
       text-align: center;
     }
 
     h1 {
-      color: #a855f7;
+      color: var(--firstcolor-primary);
       margin-bottom: 20px;
     }
 
@@ -54,7 +54,7 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
-      background: linear-gradient(90deg, #6366f1, #9333ea);
+      background: linear-gradient(90deg, var(--firstcolor-primary), var(--firstcolor-secondary));
       padding: 14px 20px;
       border-radius: 12px;
       color: white;
@@ -76,7 +76,7 @@
 
     .back-btn {
       margin-top: 40px;
-      color: #aaa;
+      color: #ccc;
       font-size: 14px;
       text-decoration: underline;
       cursor: pointer;
@@ -85,71 +85,59 @@
 </head>
 <body>
 
-  <h1>🎵 دنیای موسیقی من!  </h1>
+  <h1>🎵 دنیای موسیقی من!</h1>
 
-  <!-- آلبوم کاور -->
   <div class="cover">
-    <img src="album-cover.jpg" alt="Album Cover"> <!-- عکس کاورتو با این جایگزین کن -->
+    <img src="album-cover.jpg" alt="Album Cover">
   </div>
 
   <div class="music-links">
 
     <a class="link-item" href="https://open.spotify.com/artist/304w7eplBfFpipzMmSyV05" target="_blank">
-      <svg><use href="#spotify-icon"/></svg>
-      Spotify
+      <svg><use href="#spotify-icon"/></svg> Spotify
     </a>
 
     <a class="link-item" href="https://music.apple.com/gb/artist/%C3%B8nyro/1721889819" target="_blank">
-      <svg><use href="#apple-icon"/></svg>
-      Apple Music
+      <svg><use href="#apple-icon"/></svg> Apple Music
     </a>
 
     <a class="link-item" href="https://www.youtube.com/channel/UCzrEoPPAOr0wDHVAJL7eibw" target="_blank">
-      <svg><use href="#youtube-icon"/></svg>
-      YouTube
+      <svg><use href="#youtube-icon"/></svg> YouTube
     </a>
 
     <a class="link-item" href="https://soundcloud.com/onyro1" target="_blank">
-      <svg><use href="#soundcloud-icon"/></svg>
-      SoundCloud
+      <svg><use href="#soundcloud-icon"/></svg> SoundCloud
     </a>
 
     <a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank">
-      <svg><use href="#amazon-icon"/></svg>
-      Amazon Music
+      <svg><use href="#amazon-icon"/></svg> Amazon Music
     </a>
 
     <a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank">
-      <svg><use href="#deezer-icon"/></svg>
-      Deezer
+      <svg><use href="#deezer-icon"/></svg> Deezer
     </a>
 
   </div>
 
   <div class="back-btn" onclick="window.location.href='/'">بازگشت به صفحه اصلی</div>
 
-  <!-- آیکن‌ها به صورت SVG inline (نمادها مخفی برای استفاده در بالا) -->
+  <!-- آیکن‌های SVG -->
   <svg style="display:none;">
     <symbol id="spotify-icon" viewBox="0 0 24 24">
       <path d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm5.46 17.27a.75.75 0 01-1.04.25c-2.84-1.74-6.42-2.13-10.63-1.17a.75.75 0 01-.34-1.46c4.59-1.08 8.57-.64 11.79 1.29a.75.75 0 01.22 1.09zm1.48-3.3a.93.93 0 01-1.3.32c-3.25-2-8.2-2.58-12.02-1.42a.94.94 0 11-.52-1.81c4.33-1.25 9.76-.61 13.44 1.71a.93.93 0 01.4 1.2zm.14-3.42C15.72 8.14 8.53 8.1 5.7 9a1.12 1.12 0 11-.65-2.15c3.44-1.04 11.57-1.01 15.62 1.56a1.13 1.13 0 01-1.19 1.98z"/>
     </symbol>
-
     <symbol id="apple-icon" viewBox="0 0 24 24">
       <path d="M16.68 13.89c-.02-2.14 1.76-3.17 1.84-3.21-1-1.45-2.56-1.65-3.11-1.67-1.33-.13-2.59.79-3.27.79-.68 0-1.72-.77-2.83-.75-1.45.02-2.78.85-3.52 2.17-1.5 2.6-.39 6.45 1.07 8.56.71 1.03 1.56 2.18 2.67 2.14 1.08-.04 1.48-.69 2.78-.69 1.3 0 1.65.69 2.8.67 1.15-.02 1.87-1.05 2.57-2.09a9.1 9.1 0 001.23-2.56c-.03-.01-2.37-.91-2.39-3.06zM14.99 4.72c.57-.69.96-1.65.86-2.62-.83.03-1.82.55-2.4 1.24-.53.61-.99 1.59-.87 2.53.92.07 1.83-.47 2.41-1.15z"/>
     </symbol>
-
     <symbol id="youtube-icon" viewBox="0 0 24 24">
       <path d="M23.498 6.186a2.985 2.985 0 00-2.1-2.11C19.74 3.5 12 3.5 12 3.5s-7.74 0-9.398.576a2.985 2.985 0 00-2.1 2.11C0 7.845 0 12 0 12s0 4.155.502 5.814a2.985 2.985 0 002.1 2.11C4.26 20.5 12 20.5 12 20.5s7.74 0 9.398-.576a2.985 2.985 0 002.1-2.11C24 16.155 24 12 24 12s0-4.155-.502-5.814zM9.75 15.5v-7l6 3.5-6 3.5z"/>
     </symbol>
-
     <symbol id="soundcloud-icon" viewBox="0 0 24 24">
       <path d="M20.1 9.1a3.9 3.9 0 00-1.5.3 5.9 5.9 0 00-11-2.3 3.3 3.3 0 00-3.1 3.3v.3a2.8 2.8 0 00-.5 5.6h16.1a3.1 3.1 0 00.3-6.2z"/>
     </symbol>
-
     <symbol id="amazon-icon" viewBox="0 0 24 24">
       <path d="M6.7 1.5a2.2 2.2 0 012.3 2.3v6.4a2.2 2.2 0 01-2.3 2.3A2.2 2.2 0 014.4 10.2V3.8a2.2 2.2 0 012.3-2.3zm13.8 18.2a8.6 8.6 0 01-12.7-.6.7.7 0 011-1 7.2 7.2 0 0011.4.4l-1.8-1.1a.7.7 0 01.9-1.1l3.1 1.9a.7.7 0 01-.2 1.2l-3.2 1.3a.7.7 0 01-.9-1z"/>
     </symbol>
-
     <symbol id="deezer-icon" viewBox="0 0 24 24">
       <path d="M3 14h3v2H3zm4-2h3v4H7zm4-2h3v6h-3zm4-2h3v8h-3zm4-2h3v10h-3z"/>
     </symbol>
