--- a/music/index.html
+++ b/music/index.html
@@ -5,7 +5,7 @@
   <title>Music | ønyro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/vazirmatn@33.003.0/dist/font-face.css" rel="stylesheet">
-  <link rel="stylesheet" href="colors.css" />
+  <link rel="stylesheet" href="../colors.css" />
   <style>
     * {
       margin: 0;
