--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GameDesign | ønyro</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="colors.css" />
+  <link rel="stylesheet" href="../colors.css" />
 </head>
 <body>
   <div class="lang-switch">
