--- a/music/index.html
+++ b/music/index.html
@@ -88,7 +88,7 @@
   <h1>🎵 دنیای موسیقی من!</h1>
 
   <div class="cover">
-    <img src="album-cover.jpg" alt="Album Cover">
+    <img src="album.jpg" alt="Album Cover">
   </div>
 
   <div class="music-links">
