--- a/gamedev/index-en.html
+++ b/gamedev/index-en.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mohammad Abbasi | Game Designer</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../colors.css" />
 </head>
 <body>
   <div class="lang-switch">
