--- a/music/index.html
+++ b/music/index.html
@@ -14,11 +14,41 @@
       font-family: Vazirmatn, sans-serif;
     }
 
+    /* لایه‌های پس‌زمینه */
+    html, body {
+      height: 100%;
+    }
+
     body {
-      background-color: var(--firstcolor-background);
+      background-color: var(--firstcolor-background); /* رنگ فعلی برای مواقعی که تصویر لود نشود */
       color: #f0f0f0;
       padding: 40px 20px;
       text-align: center;
+      position: relative;
+      overflow: hidden;
+      min-height: 100dvh;
+    }
+
+    /* تصویر پس‌زمینه با بلور */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: url("music_bg.jpg") center / cover no-repeat;
+      filter: blur(12px);
+      transform: scale(1.06); /* برای پوشش حاشیه‌های بلور */
+      z-index: -2;
+      will-change: transform, filter;
+    }
+
+    /* لایه رنگی نیمه‌شفاف روی تصویر، با همان رنگ فعلی */
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: var(--firstcolor-background);
+      opacity: 0.6; /* میزان تیرگی/شفافیت رنگ روی تصویر */
+      z-index: -1;
     }
 
     h1 {
@@ -33,12 +63,14 @@
       border-radius: 16px;
       overflow: hidden;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+      backdrop-filter: none; /* جلوگیری از تأثیر بلور روی داخل کارت */
     }
 
     .cover img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      display: block;
     }
 
     .music-links {
@@ -93,27 +125,27 @@
 
   <div class="music-links">
 
-    <a class="link-item" href="https://open.spotify.com/artist/304w7eplBfFpipzMmSyV05" target="_blank">
+    <a class="link-item" href="https://open.spotify.com/artist/304w7eplBfFpipzMmSyV05" target="_blank" rel="noopener">
       <svg><use href="#spotify-icon"/></svg> Spotify
     </a>
 
-    <a class="link-item" href="https://music.apple.com/gb/artist/%C3%B8nyro/1721889819" target="_blank">
+    <a class="link-item" href="https://music.apple.com/gb/artist/%C3%B8nyro/1721889819" target="_blank" rel="noopener">
       <svg><use href="#apple-icon"/></svg> Apple Music
     </a>
 
-    <a class="link-item" href="https://www.youtube.com/channel/UCzrEoPPAOr0wDHVAJL7eibw" target="_blank">
+    <a class="link-item" href="https://www.youtube.com/channel/UCzrEoPPAOr0wDHVAJL7eibw" target="_blank" rel="noopener">
       <svg><use href="#youtube-icon"/></svg> YouTube
     </a>
 
-    <a class="link-item" href="https://soundcloud.com/onyro1" target="_blank">
+    <a class="link-item" href="https://soundcloud.com/onyro1" target="_blank" rel="noopener">
       <svg><use href="#soundcloud-icon"/></svg> SoundCloud
     </a>
 
-    <a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank">
+    <a class="link-item" href="https://www.amazon.com/music/player/artists/B0CQK8SVMV/%C3%B8nyro" target="_blank" rel="noopener">
       <svg><use href="#amazon-icon"/></svg> Amazon Music
     </a>
 
-    <a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank">
+    <a class="link-item" href="https://www.deezer.com/us/artist/247330532" target="_blank" rel="noopener">
       <svg><use href="#deezer-icon"/></svg> Deezer
     </a>
 
@@ -136,12 +168,4 @@
       <path d="M20.1 9.1a3.9 3.9 0 00-1.5.3 5.9 5.9 0 00-11-2.3 3.3 3.3 0 00-3.1 3.3v.3a2.8 2.8 0 00-.5 5.6h16.1a3.1 3.1 0 00.3-6.2z"/>
     </symbol>
     <symbol id="amazon-icon" viewBox="0 0 24 24">
-      <path d="M6.7 1.5a2.2 2.2 0 012.3 2.3v6.4a2.2 2.2 0 01-2.3 2.3A2.2 2.2 0 014.4 10.2V3.8a2.2 2.2 0 012.3-2.3zm13.8 18.2a8.6 8.6 0 01-12.7-.6.7.7 0 011-1 7.2 7.2 0 0011.4.4l-1.8-1.1a.7.7 0 01.9-1.1l3.1 1.9a.7.7 0 01-.2 1.2l-3.2 1.3a.7.7 0 01-.9-1z"/>
-    </symbol>
-    <symbol id="deezer-icon" viewBox="0 0 24 24">
-      <path d="M3 14h3v2H3zm4-2h3v4H7zm4-2h3v6h-3zm4-2h3v8h-3zm4-2h3v10h-3z"/>
-    </symbol>
-  </svg>
-
-</body>
-</html>
+      <path d="M6.7 1.5a2.2 2.2 0 012.3 2.3v6.4a2.2 2.2 0 01-2.3 2.3A2.2 2.2 0 014.4 10.2V3.8a2.2 2.2 0 012.3-2.3zm13.8 18.2a8.6 8.6 0 01-12.7-.6.7.7 0 011-1 7.2 7.2 0 0011.4.4ل-1.8-1.1a.7.7 0 01.9-1.1l3.1 1.9a.7.7 0 01-.2 1.2l-3
