--- a/music/index.html
+++ b/music/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
 
-  <h1>🎵 دنیای موسیقی من!</h1>
+  <h1>دنیای موسیقی من</h1>
 
   <div class="cover">
     <img src="album.jpg" alt="Album Cover">
