--- a/gamedev/index.html
+++ b/gamedev/index.html
@@ -46,7 +46,7 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: url("music_bg.jpg") center / cover no-repeat;
+      background: url("game_bg.jpg") center / cover no-repeat;
       filter: blur(12px);
       transform: scale(1.06); /* برای پوشش لبه‌های بلور شده */
       z-index: -2;
